Fixed heading and focus text misaligned. NOTE: Weekpicker is two pixels to high on iOS 7 but not on iOS 8

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -7,7 +7,7 @@
 TODO: em grid structure explained in plain English (when new grid structure decided!)
 */
 
-@height-heading: @grid-vertical * 1.6;
+@height-heading:70px;
 @height-container-toolbar: @grid-vertical * 1.3;
 @height-landscape-max: 769px;
 @t-max: 1025px;
@@ -106,7 +106,7 @@ Menu
   .link-menu:first-child {
     padding-top: 15px;
     line-height: @grid-vertical;
-    padding-bottom: 15px;
+    padding-bottom: 12px;
   }
   .link-menu-small {
     line-height: @grid-vertical;
